--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_fragment_ktx_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_ui_ktx_version"
     implementation "com.facebook.shimmer:shimmer:$shimmer_version"
+    implementation "androidx.core:core-splashscreen:$core_splashscreen_version"
 }
