--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.appcompat_version = "1.1.0"
     ext.core_ktx_version = "1.7.0"
     ext.constraint_version = "2.0.4"
+    ext.core_splashscreen_version = "1.0.0"
     ext.legacy_support_version = "1.0.0"
     ext.junit_version = "4.13.2"
     ext.androidx_junit_version = "1.1.3"
