--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -37,4 +37,8 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$instrumented_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "org.mockito:mockito-core:$mockito_core_version"
+
+    // shared pref
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
 }
