--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.naufaldystd.storyapps">
 
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:name=".MyApplication"
@@ -16,6 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApps"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.story.add.AddStoryActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.story.StoryActivity"
             android:exported="false" />
