--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -24,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApps"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.story.add.CameraXActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.story.add.AddStoryActivity"
             android:exported="false" />
