--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ buildscript {
     ext.truth_version = '1.1.3'
     ext.mockito_core_version = '3.9.0'
     ext.instrumented_junit_version = '1.1.3'
+    ext.camerax_version = "1.1.0-beta02"
 
     repositories {
         google()
