--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ buildscript {
     ext.mockito_core_version = '3.9.0'
     ext.instrumented_junit_version = '1.1.3'
     ext.camerax_version = "1.1.0-beta02"
+    ext.shimmer_version = "0.5.0"
 
     repositories {
         google()
