--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,65 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.6.21'
-    ext.appcompat_version = "1.1.0"
-    ext.core_ktx_version = "1.7.0"
-    ext.constraint_version = "2.0.4"
-    ext.core_splashscreen_version = "1.0.0"
-    ext.legacy_support_version = "1.0.0"
-    ext.junit_version = "4.13.2"
-    ext.androidx_junit_version = "1.1.3"
-    ext.espresso_version = "3.4.0"
-    ext.multidex_version = "2.0.1"
+    ext {
+        // Jetpack
+        kotlin_version = '1.6.21'
+        appcompat_version = "1.1.0"
+        core_ktx_version = "1.7.0"
+        constraint_version = "2.1.4"
+        core_splashscreen_version = "1.0.0"
+        legacy_support_version = "1.0.0"
+        junit_version = "4.13.2"
+        androidx_junit_version = "1.1.3"
+        espresso_version = "3.4.0"
+        multidex_version = "2.0.1"
+        livedata_ktx_version = "2.5.1"
+        viewmodel_ktx_version = "2.5.1"
+        navigation_fragment_ktx_version = '2.5.1'
+        navigation_ui_ktx_version = '2.5.1'
+        fragment_version = "1.5.2"
+        activity_ktx_version = "1.5.1"
+        fragment_ktx_version = '1.5.2'
+        annotation_version = "1.4.0"
+        cardview_version = "1.0.0"
+        recyclerview_version = "1.1.0"
+        material_version = "1.6.1"
+        lifecycle_version = "2.5.1"
 
-    ext.cardview_version = "1.0.0"
-    ext.recyclerview_version = "1.1.0"
-    ext.material_version = "1.2.1"
-    ext.glide_version = "4.11.0"
+        // Glide
+        glide_version = "4.11.0"
 
-    ext.room_version = "2.4.3"
+        // Room
+        room_version = "2.4.3"
+        sqlite_ktx_version = '2.2.0'
 
-    ext.retrofit_version = "2.9.0"
-    ext.logging_interceptor_version = '4.9.0'
+        // Retrofit
+        retrofit_version = "2.9.0"
+        logging_interceptor_version = '4.9.0'
 
-    ext.kotlin_coroutines_version = "1.5.2"
-    ext.lifecycle_version = "2.5.1"
+        // Coroutines
+        kotlin_coroutines_version = "1.5.2"
 
-    ext.dagger_version = "2.30.1"
-    ext.activity_ktx_version = "1.5.1"
-    ext.fragment_ktx_version = '1.5.2'
-    ext.navigation_fragment_ktx_version = '2.5.1'
-    ext.navigation_ui_ktx_version = '2.5.1'
+        // Dagger-hilt
+        dagger_version = "2.30.1"
+        hilt_version = '2.40.5'
+        hilt_jetpack_version = '1.0.0-alpha03'
 
-    ext.hilt_version = '2.40.5'
-    ext.hilt_jetpack_version = '1.0.0-alpha03'
+        // Shimmer
+        shimmer_version = "0.5.0"
 
-    ext.shimmer_version = "0.5.0"
+        // Testing
+        test_core_version = '1.4.0'
+        harmcrest_version = '1.3'
+        core_testing_version = '2.1.0'
+        kotlin_coroutines_test_version = '1.6.1'
+        truth_version = '1.1.3'
+        mockito_core_version = '3.9.0'
+        instrumented_junit_version = '1.1.3'
 
-    ext.sqlite_ktx_version = '2.2.0'
+        // Camera X
+        camerax_version = "1.2.0-beta01"
+    }
 
-    ext.test_core_version = '1.4.0'
-    ext.harmcrest_version = '1.3'
-    ext.core_testing_version = '2.1.0'
-    ext.kotlin_coroutines_test_version = '1.6.1'
-    ext.truth_version = '1.1.3'
-    ext.mockito_core_version = '3.9.0'
-    ext.instrumented_junit_version = '1.1.3'
-    ext.camerax_version = "1.2.0-beta01"
-    ext.shimmer_version = "0.5.0"
 
     repositories {
         google()
