--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         multidex_version = "2.0.1"
         livedata_ktx_version = "2.5.1"
         viewmodel_ktx_version = "2.5.1"
-        navigation_fragment_ktx_version = '2.5.1'
+        navigation_fragment_ktx_version = '2.5.2'
         navigation_ui_ktx_version = '2.5.1'
         fragment_version = "1.5.2"
         activity_ktx_version = "1.5.1"
@@ -58,6 +58,13 @@ buildscript {
 
         // Camera X
         camerax_version = "1.1.0-beta02"
+
+        // Datastore pref
+        datastore_version = "1.0.0"
+
+        // Google maps
+        service_map_version = "18.0.1"
+        service_location_version = "20.0.0"
     }
 
 
