--- a/core/build.gradle
+++ b/core/build.gradle
@@ -65,5 +65,7 @@ dependencies {
     api "androidx.activity:activity-ktx:$activity_ktx_version"
     api "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+
 
 }
