--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDhsa2rI99IgF6VcHCk2TYBbeOSrvDI4Dc" />
+            android:value="INSERT API KEY" />
 
         <activity
             android:name=".ui.story.add.CameraXActivity"
